--- a/lib/adoptoposs_web/templates/layout/app.html.eex
+++ b/lib/adoptoposs_web/templates/layout/app.html.eex
@@ -12,11 +12,20 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+            <li class="row">
+              <%= if @current_user do %>
+                <a class="column" href="/auth/github/logout">Logout</a>
+                <a class="column" href="<%= @current_user.url %>" title="<%=@current_user.name %>">
+                  <img width="45" src="<%= @current_user.avatar %>" alt="<%=@current_user.name %>">
+                </a>
+              <% else %>
+                <a href="/auth/github">Login with Github</a>
+              <% end %>
+            </li>
           </ul>
         </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
+        <a href="/" class="phx-logo">
+          <img src="<%= Routes.static_path(@conn, "/images/adoptoposs.png") %>" alt="Adoptoposs Logo"/>
         </a>
       </section>
     </header>
