Add border-radius for images

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -9,6 +9,7 @@
 }
 
 .card {
+  background-color: #ffffff;
   margin: 16px 0;
   border-radius: 3px;
   border-bottom: 1px #ddd solid;
@@ -90,6 +91,7 @@
     padding: 2px;
     margin-left: 4px;
     width: 28px;
+    border-radius: 4px;
   }
 }
 
