--- a/lib/adoptoposs_web/templates/search/project.html.eex
+++ b/lib/adoptoposs_web/templates/search/project.html.eex
@@ -31,6 +31,13 @@
         Open issues: <%= readable_number(@project.issue_count) %>
       </p>
     </div>
+    <div class="score">
+      <div class="traffic-light <%= maintainance_need(@project) %>">
+        <span><i>😻</i></span>
+        <span><i>😸</i></span>
+        <span><i>🙀</i></span>
+      </div>
+    </div>
   </div>
 
   <div class="footer">
