--- a/lib/adoptoposs_web/templates/search/index.html.eex
+++ b/lib/adoptoposs_web/templates/search/index.html.eex
@@ -3,10 +3,24 @@
   <%= AdoptopossWeb.SharedView.render "search_input.html", conn: @conn %>
 </section>
 
+<section class="row switch">
+  <div class="switch-toggles">
+    <a class="switch-toggle red" href="/search?q=<%= Map.get(@conn.params, "q")%>">
+      <div class="icon">🙀</div>
+      <div>possibly unmaintained</div>
+    </a>
+    <a class="switch-toggle yellow" href="/search?q=<%= Map.get(@conn.params, "q")%>&type=help">
+      <div class="icon">😻</div>
+      <div>might also need help</div>
+    </a>
+  </div>
+  <div class="switch-indicator <%= switch_type(@conn) %>"></div>
+</section>
+
 <section class="row">
-  <div class=card-container>
+  <div class="card-container">
     <%= for result <- @results do %>
       <%= render "project.html", project: result %>
     <% end %>
-  </ul>
+  </div>
 </section>
