Move RepoLive.Index to RepoLive module
...and move repo live view/component from /repo_live to live/ directory

--- a/lib/adoptoposs_web/templates/layout/app.html.eex
+++ b/lib/adoptoposs_web/templates/layout/app.html.eex
@@ -14,7 +14,7 @@
           <ul>
             <%= if @current_user do %>
               <li>
-                <%= link "Submit repo", to: Routes.live_path(@conn, AdoptopossWeb.RepoLive.Index, @current_user.username) %>
+                <%= link "Submit repo", to: Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username) %>
               </li>
 
               <li>
