Add infinite scroll for search results

--- a/lib/adoptoposs_web/templates/project/project.html.leex
+++ b/lib/adoptoposs_web/templates/project/project.html.leex
@@ -1,4 +1,4 @@
-<div>
+<div id="project-<%= @project.id %>">
   <h2><%= @project.name %></h2>
 
   <span><%= @project.data["language"]["name"] %></span>
