--- a/lib/adoptoposs_web/templates/layout/app.html.eex
+++ b/lib/adoptoposs_web/templates/layout/app.html.eex
@@ -7,46 +7,58 @@
     <title>Adoptoposs · Keep open source projects maintained</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
+
   <body>
     <header>
-      <section class="container">
-        <nav role="navigation">
-          <ul>
-            <%= if @current_user do %>
-              <li>
-                <%= link "Search", to: Routes.live_path(@conn, AdoptopossWeb.SearchLive) %>
-              </li>
+      <nav class="flex max-w-6xl items-center flex-wrap px-6 py-4" role="navigation">
+        <div class="flex items-center flex-shrink-0 mr-6">
+          <a href="/" class="font-semibold text-xl tracking-tight">
+            <img src="<%= Routes.static_path(@conn, "/images/adoptoposs.png") %>" alt="Adoptoposs Logo"/>
+          </a>
+        </div>
 
-              <li>
-                <%= link "Submit repo", to: Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username) %>
-              </li>
+        <div class="block lg:hidden">
+          <button class="flex items-center px-3 py-2 border-red-300">
+            <svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+          </button>
+        </div>
 
-              <li>
-                <%= link "Your Projects", to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive) %>
-              </li>
+        <div class="w-full text-md block flex-grow justify-end lg:flex lg:flex-row lg:items-end lg:w-auto">
+          <%= link "Search", to: Routes.live_path(@conn, AdoptopossWeb.SearchLive), class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
 
-              <li><a href="/auth/github/logout">Logout</a></li>
+          <%= if @current_user do %>
+            <%= link "Submit Repos", to: Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username), class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
 
-              <li>
-                <img width="30px" src="<%= @current_user.avatar_url %>" alt="<%=@current_user.name %>">
-              </li>
-            <% else %>
-              <li>
-                <a href="/auth/github">Login with Github</a>
-              </li>
-            <% end %>
-          </ul>
-        </nav>
-        <a href="/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/adoptoposs.png") %>" alt="Adoptoposs Logo"/>
-        </a>
-      </section>
+            <%= link "Your Projects", to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive), class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
+
+            <a href="/auth/github/logout" class="block mt-4 lg:flex lg:mt-0 mr-4 p-2">
+              Logout
+            </a>
+
+            <img class="inline-block rounded-full h-10 w-10" width="30px" src="<%= @current_user.avatar_url %>" alt="<%=@current_user.name %>">
+          <% else %>
+            <div class="block md:inline-block">
+              <a href="/auth/github" class="inline-block text-md px-4 py-2 leading-none border border-red-300 rounded mt-4 lg:mt-0">
+                Login with Github
+              </a>
+            </div>
+          <% end %>
+        </div>
+      </nav>
     </header>
-    <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+
+    <main class="p-4" role="main" >
+      <%= if get_flash(@conn, :info) do %>
+        <p class="bg-green-400 text-white text-center font-medium p-4" role="alert"><%= get_flash(@conn, :info) %></p>
+      <% end %>
+
+      <%= if get_flash(@conn, :error) do %>
+        <p class="bg-red-400 text-white text-center font-medium p-4" role="alert"><%= get_flash(@conn, :error) %></p>
+      <% end %>
+
       <%= render @view_module, @view_template, assigns %>
     </main>
+
     <%= csrf_meta_tag() %>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
